fix: flexbox does not seem to work on Chrome

--- a/scss/month-view.scss
+++ b/scss/month-view.scss
@@ -92,12 +92,12 @@
   }
 
   .cal-events {
-    flex: 1;
-    align-items: flex-end;
-    //margin: 3px;
-    //line-height: 10px;
-    display: flex;
-    flex-wrap: wrap;
+    //flex: 1;
+    //align-items: flex-end;
+    ////margin: 3px;
+    ////line-height: 10px;
+    //display: flex;
+    //flex-wrap: wrap;
     min-height: 70px;
   }
 
